[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Background1.png" type="Texture" id=1]
[ext_resource path="res://assets/bird1.png" type="Texture" id=2]
[ext_resource path="res://PILLARS.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 420 )

[sub_resource type="BitmapFont" id=6]
height = 20.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 508, 10 )

[sub_resource type="AnimatedTexture" id=7]

[node name="MainScene" type="Node2D"]
position = Vector2( 64, 64 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 448, 328 )
scale = Vector2( 4.67704, 1.6007 )
texture = ExtResource( 1 )

[node name="Background1" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 448, 248 )
scale = Vector2( 4.67704, 1.6007 )
texture = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 408, 240.5 )

[node name="Bird1" type="Sprite" parent="Player/Sprite"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 408.5, 240 )
shape = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="Player"]
position = Vector2( 408, 240.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/HitBox"]
position = Vector2( 0.5, 1 )
shape = SubResource( 2 )

[node name="Resetter" type="Area2D" parent="Player"]
position = Vector2( -96, 240 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Resetter"]
shape = SubResource( 4 )

[node name="PILLARS" parent="." instance=ExtResource( 3 )]
position = Vector2( 960, 224 )

[node name="PILLARS2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1336, 168 )

[node name="PILLARS4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1536, 296 )

[node name="PILLARS5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1728, 176 )

[node name="PILLARS6" parent="." instance=ExtResource( 3 )]
position = Vector2( 1920, 48 )

[node name="PILLARS3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1152, 280 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="SCORE" type="RichTextLabel" parent="CanvasLayer"]
anchor_top = 0.011
anchor_right = 0.0231875
anchor_bottom = 0.04
margin_left = 448.0
margin_top = 33.4
margin_right = 488.256
margin_bottom = 80.0
custom_colors/default_color = Color( 0.929412, 0.462745, 0.984314, 1 )
custom_fonts/bold_font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HIGHSCORE" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 0.75
anchor_top = 0.037
anchor_right = 0.75
anchor_bottom = 0.037
margin_left = -6.10352e-05
margin_top = -0.200001
margin_right = 112.0
margin_bottom = 39.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UPresetter" type="Area2D" parent="."]
position = Vector2( 400, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UPresetter"]
position = Vector2( 44, 0 )
shape = SubResource( 5 )

[node name="Lowresetter" type="Area2D" parent="."]
position = Vector2( 400, 584 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lowresetter"]
position = Vector2( 44, 0 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 409, 242 )
current = true
zoom = Vector2( 0.9, 1 )
process_mode = 0
limit_left = 0
limit_top = 0
limit_right = 1080
limit_bottom = 1920

[node name="Pause_Button" type="Button" parent="."]
margin_left = -40.0
margin_top = -44.0
margin_right = -16.0
margin_bottom = -16.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "Pause"
icon = SubResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Player/HitBox" to="Player" method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="Player/HitBox" to="Player" method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="Player/Resetter" to="Player" method="_on_Resetter_body_entered"]
[connection signal="draw" from="CanvasLayer/SCORE" to="Player" method="_on_SCORE_draw"]
[connection signal="body_entered" from="UPresetter" to="Player" method="_on_UPresetter_body_entered"]
[connection signal="body_entered" from="Lowresetter" to="Player" method="_on_Lowresetter_body_entered"]
[connection signal="pressed" from="Pause_Button" to="Player" method="_on_Button_pressed"]
